testdata/baselines/reference/compiler/tluaVarargErrors.errors.txt
grammar.tlua(8,26): error TS1014: A rest parameter must be last in a parameter list.
grammar.tlua(11,36): error TS1047: A rest parameter cannot be optional.
grammar.tlua(15,36): error TS1048: A rest parameter cannot have an initializer.
grammar.tlua(15,36): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
grammar.tlua(18,31): error TS100034: A vararg parameter cannot have a name.
grammar.tlua(23,36): error TS2370: A rest parameter must be of an array type.
grammar.tlua(23,39): error TS100034: A vararg parameter cannot have a name.
grammar.tlua(27,43): error TS100034: A vararg parameter cannot have a name.
legacy.d.tlua(2,29): error TS100034: A vararg parameter cannot have a name.
legacy.d.tlua(3,26): error TS100034: A vararg parameter cannot have a name.
main.tlua(7,13): error TS100035: A '...' expression is only allowed inside a vararg function.
main.tlua(14,14): error TS100035: A '...' expression is only allowed inside a vararg function.
main.tlua(21,11): error TS100035: A '...' expression is only allowed inside a vararg function.
main.tlua(28,15): error TS100035: A '...' expression is only allowed inside a vararg function.
main.tlua(34,11): error TS2345: Argument of type 'number | nil' is not assignable to parameter of type 'number'.
  Type 'nil' is not assignable to type 'number'.
main.tlua(34,14): error TS1005: ',' expected.
main.tlua(35,14): error TS1005: ',' expected.
main.tlua(35,20): error TS2554: Expected 2 arguments, but got 3.
main.tlua(36,17): error TS1005: ',' expected.
main.tlua(36,17): error TS2554: Expected 2 arguments, but got 4.
main.tlua(37,14): error TS1005: ',' expected.
main.tlua(37,20): error TS2554: Expected 2 arguments, but got 4.
main.tlua(37,23): error TS1005: ',' expected.
main.tlua(38,27): error TS1005: ',' expected.
main.tlua(39,31): error TS1005: ',' expected.
main.tlua(43,7): error TS1003: Identifier expected.
main.tlua(43,9): error TS2304: Cannot find name 'a'.
main.tlua(43,9): error TS2695: Left side of comma operator is unused and has no side effects.
main.tlua(43,15): error TS1005: ';' expected.
main.tlua(43,15): error TS2304: Cannot find name 'restOfObj'.
main.tlua(43,27): error TS2809: Declaration or statement expected. This '=' follows a block of statements, so if you intended to write a destructuring assignment, you might need to wrap the whole assignment in parentheses.


==== main.tlua (21 errors) ====
    declare function consume(a: number, b: number): void;
    declare nums: number[];
    declare obj: { a: number; b: number };
    
    // `...` outside any vararg function.
    function notVararg(): void
      local x = ...;
                ~~~
!!! error TS100035: A '...' expression is only allowed inside a vararg function.
    end
    
    // The same, as a *non-tail* call argument. This is the shape that made the v1
    // implementation panic: the pack probe must stay pure and report 100035 here
    // rather than returning an error type into the argument machinery.
    function nonTailArgument(): void
      consume(1, ...);
                 ~~~
!!! error TS100035: A '...' expression is only allowed inside a vararg function.
    end
    
    // An illegal `...` as the whole argument list: 100035 only. The illegal tail
    // keeps the tail's arity treatment, so no "Expected 2 arguments, but got 1"
    // stacks on top of the one real error.
    function illegalTailOnly(): void
      consume(...);
              ~~~
!!! error TS100035: A '...' expression is only allowed inside a vararg function.
    end
    
    // A nested function does not capture the outer pack; the pack is not a
    // capturable local.
    function outer(...: number): void
      local inner = function(): void
        local y = ...;
                  ~~~
!!! error TS100035: A '...' expression is only allowed inside a vararg function.
      end;
    end
    
    // Operand spread is gone in every position.
    function spreads(...: number): void
      consume(...nums);
              ~~~
!!! error TS2345: Argument of type 'number | nil' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'nil' is not assignable to type 'number'.
                 ~~~~
!!! error TS1005: ',' expected.
      consume(...nums, 1);
                 ~~~~
!!! error TS1005: ',' expected.
                       ~
!!! error TS2554: Expected 2 arguments, but got 3.
      consume(1, ...nums, 2);
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 4.
      consume(...nums, ...nums);
                 ~~~~
!!! error TS1005: ',' expected.
                       ~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 4.
                          ~~~~
!!! error TS1005: ',' expected.
      local spreadTable = {...obj};
                              ~~~
!!! error TS1005: ',' expected.
      local spreadThenField = {...obj, a = 1};
                                  ~~~
!!! error TS1005: ',' expected.
    end
    
    // Binding-pattern rest is gone.
    local { a, ...restOfObj } = obj;
          ~
!!! error TS1003: Identifier expected.
            ~
!!! error TS2304: Cannot find name 'a'.
            ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                  ~~~~~~~~~
!!! error TS1005: ';' expected.
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'restOfObj'.
                              ~
!!! error TS2809: Declaration or statement expected. This '=' follows a block of statements, so if you intended to write a destructuring assignment, you might need to wrap the whole assignment in parentheses.
    
==== grammar.tlua (8 errors) ====
    // The vararg parameter grammar. These are *checker* grammar rules, not parse
    // errors -- a parse error would suppress every semantic diagnostic in the whole
    // program -- so they live in a file that parses cleanly: grammarErrorOnNode is
    // itself suppressed in any file that has parse diagnostics, which is why main.tlua
    // cannot host them.
    
    // A vararg parameter must be last.
    declare function notLast(...: number, a: number): void;
                             ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
    
    // A vararg parameter cannot be optional...
    declare function optionalVararg(...?: number): void;
                                       ~
!!! error TS1047: A rest parameter cannot be optional.
    
    // ...nor carry an initializer. The span is the parameter, not its name: a
    // vararg's name is a zero-width synthetic identifier and would give no span.
    declare function initializedVararg(... = 1): void;
                                       ~~~~~~~
!!! error TS1048: A rest parameter cannot have an initializer.
                                       ~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    
    // A vararg parameter cannot have a name: the legacy TS rest form is gone.
    declare function namedRest(...args: number[]): void;
                                  ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    
    // A named rest is still parsed for recovery, so it is still held to the old rule
    // that its type is an array -- it is the one rest form that is not element-typed
    // and not array-wrapped.
    declare function namedRestNotArray(...args: number): void;
                                       ~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
                                          ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    
    // And a named rest in a callable type is a (rejected) parameter list, not a
    // pure-variadic return pack.
    declare function namedRestInReturn(): (...args: string[]) => void;
                                              ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    
==== legacy.d.tlua (2 errors) ====
    // Named rest is rejected in declaration files too -- there is no carve-out.
    declare function fromDts(...args: string[]): void;
                                ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    declare fromDtsType: (...args: string[]) => void;
                             ~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    